@@ -1,3 +1,8 @@
+2007-02-06  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/f7.py (F7Handler.Key.__str__):  Add a newline.
+	* pykickstart/commands/rhel5.py (RHEL5Handler.Key.__str__):  Likewise.
+
 2007-02-01  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/commands/fc4.py:  Fix tracebacks in subclass __str__
